--- a/app-2.html
+++ b/app-2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html> 
 <html>
 <head>
+  <meta charset="utf-8">
   <title>Page Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
