--- a/app-4.html
+++ b/app-4.html
@@ -46,10 +46,10 @@
 
 <div data-role="page" id="dialog">
   <div data-role="header">
-    <p>Treść okna</p>
+    <h2>Tytuł</h2>
   </div>
   <div data-role="content">
-    <p>Strona trzecia. <a href="#glowna">Powrót na główną</a>.</p>
+    <p>Treść okna</p>
   </div>
 </div>
 
